name:                  uu-cco-hut-parsing
version:               0.1.0.0
synopsis:              Utilities for compiler construction
description:           A small utility library accompanying the course on
                       Compiler Construction (INFOMCCO) at Utrecht Univerity.
license:               BSD3
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2008-2014 Utrecht University
author:                Stefan Holdermans <stefan@holdermans.nl>
maintainer:            Atze Dijkstra <atze@uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/Software
build-type:            Simple
cabal-version:         >= 1.2
extra-source-files:    AUTHORS

library
  build-depends:       base >= 4 && < 5, uulib >= 0.9.15, uu-cco >= 0.1.0.0
  exposed-modules:     CCO.Parsing.UU
  other-modules:       
  extensions:          Rank2Types
  hs-source-dirs:      src

